# InsightFlow-Gfg_Hackathon

./: .env  .env.example  .gitignore  .pyre_configuration  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  implementation_plan(current)  pyproject.toml  start.py  vercel.json
api/: index.py  requirements.txt
backend/: alembic.ini  ingest.py  insightflow.db  main.py  post_processor.py  query_pipeline.py  requirements.txt  schema_context.py  session_store.py
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep
backend/auth/: dependencies.py  models.py  router.py  service.py
backend/core/: config.py  database.py  exceptions.py  logging.py  redis.py
backend/dashboards/: __init__.py  router.py  service.py
backend/datasets/: __init__.py  models.py  router.py
backend/datasets/ingest/: __init__.py  parser.py
backend/legacy/: router.py
backend/llm/: cache.py  providers.py  sanitizer.py
backend/middleware/: security.py
backend/pipeline/: executor.py  history.py  insight.py  postprocessor.py  router.py  runner.py  stage1_sql.py  stage2_viz.py
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
docs/: ai_agent_rules.md  architecture.md  implementation_plan.md  insightflow_analysis.md  prd.md
frontend/: cleanup.py  cleanup_app_css.py  index.html  package-lock.json  package.json  transform_dashboard.py
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/components/: ChatBot.jsx  DataTable.jsx  DiagnosticModal.jsx  DynamicChart.jsx  ExportButton.jsx  FullReportWidget.jsx  Navbar.jsx  Navbar.module.css  SharedComponents.jsx  SharedComponents.module.css  ThemeToggle.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/design-system/: colors.js  reset.css  tokens.css  typography.js  utilities.css
frontend/src/hooks/: useQueryStream.js
frontend/src/pages/: AutoDashboard.jsx  AutoDashboard.module.css  Dashboard.jsx  History.jsx  History.module.css  Landing.jsx  Landing.module.css  Login.jsx  Login.module.css  QueryExplorer.jsx  QueryExplorer.module.css  Register.jsx  SharedDashboard.jsx  SharedDashboard.module.css  (+2 more)
sessions/: sess_gs3y4ps0pmmxfz213.db-shm  sess_gs3y4ps0pmmxfz213.db-wal
(+55 files in other folders)
