[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insightflow"
version = "2.0.0"
description = "Natural language BI dashboards — production grade"
requires-python = ">=3.11"

dependencies = [
    # ── Web Framework ──────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # ── Database ───────────────────────────────────────────────────
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",

    # ── Cache / Rate limiting ──────────────────────────────────────
    "redis[hiredis]>=5.0.0",
    "slowapi>=0.1.9",

    # ── Auth ───────────────────────────────────────────────────────
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "authlib>=1.3.0",

    # ── HTTP client ────────────────────────────────────────────────
    "httpx>=0.27.0",

    # ── SQL safety ────────────────────────────────────────────────
    "sqlglot>=25.0.0",

    # ── Observability ─────────────────────────────────────────────
    "structlog>=24.0.0",
    "sentry-sdk[fastapi]>=2.0.0",

    # ── Config ────────────────────────────────────────────────────
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",

    # ── Utilities ─────────────────────────────────────────────────
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",          # for TestClient
    "anyio>=4.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = []

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["S101", "S603", "B008"]   # allow assert in tests, subprocess, Depends()

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
